# tritonflow

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  gpu-tests.yml
benchmarks/: __init__.py  configs.py  framework.py  reporters.py  suite.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: architecture.md  benchmarking.md  contributing.md  kernels.md  optimization.md
examples/: custom_kernel.py  scientific_computing.py  transformer_acceleration.py  vector_search.py
scripts/: run_benchmarks.sh  setup_dev.sh
tests/: conftest.py  test_activations.py  test_attention.py  test_benchmark_framework.py  test_cli.py  test_embedding.py  test_matrix_ops.py  test_normalization.py  test_quantization.py  test_scientific.py  test_similarity.py  test_utils.py  test_vector_ops.py
tritonflow/: __init__.py
tritonflow/cli/: __init__.py  app.py
tritonflow/cli/commands/: __init__.py  benchmark.py  compare.py  info.py  profile.py  visualize.py
tritonflow/kernels/: __init__.py  activations.py  attention.py  embedding.py  matrix_ops.py  normalization.py  quantization.py  scientific.py  similarity.py  vector_ops.py
tritonflow/profiling/: __init__.py  nsight.py  profiler.py  timeline.py
tritonflow/utils/: __init__.py  autotuning.py  dtypes.py  gpu.py  validators.py
