[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tritonflow"
version = "0.1.0"
description = "High-performance GPU kernels for modern AI, vector search, analytics, and scientific computing using OpenAI Triton."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Yabloko Labs Ltd"},
]
keywords = ["triton", "gpu", "cuda", "kernels", "ai", "deep-learning", "hpc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
    "triton>=2.1.0",
    "numpy>=1.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
]
bench = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
]
all = ["tritonflow[dev,bench]"]

[project.scripts]
tritonflow = "tritonflow.cli.app:app"

[project.urls]
Homepage = "https://github.com/yablokolabs/tritonflow"
Repository = "https://github.com/yablokolabs/tritonflow"
Issues = "https://github.com/yablokolabs/tritonflow/issues"
Documentation = "https://github.com/yablokolabs/tritonflow/tree/main/docs"

[tool.setuptools.packages.find]
include = ["tritonflow*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tritonflow/kernels/*.py" = ["N803", "N806", "E731"]

[tool.ruff.lint.isort]
known-first-party = ["tritonflow"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
    "slow: marks tests as slow running",
    "benchmark: marks benchmark regression tests",
]
addopts = "-v --tb=short"
